Exercise react apis and notes
Co-authored-by: Frank Menzel <menzel@sipgate.de>

--- a/src/exercise/02.md
+++ b/src/exercise/02.md
@@ -1,8 +1,39 @@
 # Intro to raw React APIs
 
-## 📝 Your Notes
+# Notes
 
-Elaborate on your learnings here in `src/exercise/02.md`
+## Imperative / Declarative Programming
+
+Imperative Programming: How you do something: [writing a function that contains
+every step until something is done], [telling the waiter to get a seat at the
+empty table in the back of the room, you see has just emptied]
+
+Declarative Programming: What you do: [writing a function that contains built in
+stuff just to get the result you want done], [telling the waiter to get a seat
+for two]
+
+Declarative Programming approaches almost always built up upon imperative
+programming, but it doesn't matter because you don't need to know **how** it is
+done.
+
+## In DOM:
+
+```js
+const element = document.createElement('div')
+element.textContent = 'Hello
+World' element.className = 'container'
+```
+
+## In React:
+
+```js
+const element = React.createElement('div', {
+  className: 'container',
+  children: 'hello world!',
+})
+```
+
+# Workshop
 
 ## Background
 
