finish chapter using JSX

--- a/src/exercise/02.md
+++ b/src/exercise/02.md
@@ -20,7 +20,7 @@ done.
 
 ```js
 const element = document.createElement('div')
-element.textContent = 'Hello
+element.textContent = 'Hello'
 World' element.className = 'container'
 ```
 
