--- a/src/exercise/03.md
+++ b/src/exercise/03.md
@@ -2,7 +2,15 @@
 
 ## 📝 Your Notes
 
-Elaborate on your learnings here in `src/exercise/03.md`
+Learnings: 
+* JSX has to be compiled, use babeljs for this. JSX is compiled down to `React.createElement()` calls. Those objects are called "React elements".
+* Super Helpful to try transforming JSX Statements to React Create 
+* You can use Javascript Expressions (e.g. Variables) by submitting them in an JSX expression within curly braces `{variable}`
+* divs can be self closing in JSX (HTML does not allow this) `<div />`
+* The React DOM is escaping any values embedded in JSX by default, before rendering them. Everything is converted to a string before being rendered. This helps prevent XSS
+* Since JSX compiles down to regular JavaScript, it is fine to use JSX inside of `if` statements and `for` loops, assign it to variables, accept it as an argument, and return it from functions
+* Props objects can be used to store each Property of an Element. To hand over all of them use the `...` "spread" Syntax
+* Props can be overwritten in a statement by applying a definition behind the ...Props statement.
 
 ## Background
 
