--- a/src/exercise/04.md
+++ b/src/exercise/04.md
@@ -2,8 +2,9 @@
 
 ## 📝 Your Notes
 
-Elaborate on your learnings here in `src/exercise/04.md`
-
+* Functions in React are called "components" - they return something that is "renderable".
+* Components start with a capitalized letter, if they return a custom made renderable component such as `<SpecificComponent>`.
+* If a component starts with a lowercase letter, it has to return a builtin component such as `<div>`.
 ## Background
 
 Just like in regular JavaScript, you often want to share code which you do using
