Exercise 4: extra credit 3
Co-authored-by: Florian Jerusalem <jerusalem@sipgate.de>

--- a/src/exercise/04.md
+++ b/src/exercise/04.md
@@ -2,9 +2,16 @@
 
 ## 📝 Your Notes
 
-* Functions in React are called "components" - they return something that is "renderable".
-* Components start with a capitalized letter, if they return a custom made renderable component such as `<SpecificComponent>`.
-* If a component starts with a lowercase letter, it has to return a builtin component such as `<div>`.
+- Functions in React are called "components" - they return something that is
+  "renderable".
+- Components start with a capitalized letter, if they return a custom made
+  renderable component such as `<SpecificComponent>`.
+- If a component starts with a lowercase letter, it has to return a builtin
+  component such as `<div>`.
+- Calling custom components from JSX works like this
+  `ui = <lower_snake_case />`and Babel compiles it to
+  `React.createElement('lower_snake_case')`
+
 ## Background
 
 Just like in regular JavaScript, you often want to share code which you do using
